Squash visual bugs

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -2,6 +2,13 @@
     line-height: 1.5;
 }
 
+.tags-input {
+    flex-wrap: wrap;
+    height: auto;
+    min-height: 36px;
+    padding-top: 0.25rem;
+}
+
 .tags-input:focus-within {
     box-shadow: 0 0 8px var(--primary);
 }
@@ -14,6 +21,7 @@
     display: inline-flex;
     font-size: 0.875rem;
     line-height: 1;
+    margin-bottom: 0.25rem;
     padding: 0.125rem 0.375rem;
     user-select: none;
 }
@@ -29,6 +37,7 @@
 }
 
 .tags-input-text {
+    margin-bottom: 0.25rem;
     margin-left: 0.25rem;
     min-width: 8rem;
     outline: 0;
